# LumiCite

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.ollama  LICENSE  Makefile  README.md  README_ZH.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: benchmark_QA.csv
data/metadata/: disc.txt
data/pdfs/: sample_ai_impacts.csv
docker/: ollama-entrypoint.sh
src/: main.py
src/api/: .routes.py.swp  app.py  routes.py  schemas.py
src/config/: settings.py
src/core/: __init__.py  constants.py  errors.py  logging.py  model_assets.py  paths.py  schemas.py
src/evaluation/: __init__.py  evaluator.py  metrics.py
src/generation/: generator.py  llm_client.py  make_submission.py  make_submission_ollama.py  prompt_templates.py  rag_pipeline.py  verifier.py
src/indexing/: bm25_index.py  embedder.py  ollama_generator.py  retrieval.py  vector_store.py
src/ingestion/: .chunker.py.swp  alt_text_generator.py  chunker.py  chunker_experimental.py  embedder.py  inference.py  json_builder.py  legacy_loader.py  load_files.py  manifest.py  mineru_mapper.py  mineru_runner.py  ocr_extract.py  ocr_text.py  pipeline.py  visual_assets.py  visual_summary.py
src/retrieval/: __init__.py  dense_retriever.py  hybrid_retriever.py  query_explanation.py  query_router.py  reranker.py  sparse_retriever.py
tests/: benchmark_QA_default_query_results.csv  conftest.py  debug_generation.py  debug_visual_inference.py  run_benchmark_QA_default_query_batch.py
tests/integration/: test_api.py  test_api_contracts.py  test_canonical_jsonl.py  test_cli_contracts.py  test_cli_phase1.py  test_cli_phase3.py  test_cli_phase4.py  test_ingestion_pipeline.py  test_retrieval_pipeline.py
tests/unit/: test_api_schemas.py  test_chunker.py  test_chunker_mapper.py  test_core_contracts.py  test_core_runtime.py  test_embedder.py  test_engineering_contracts.py  test_evaluator.py  test_index_persistence.py  test_legacy_loader.py  test_llm_client.py  test_manifest.py  test_metrics.py  test_mineru_runner.py  (+10 more)
(+7 files in other folders)
